# pigeonstrikesback-game-dev-patterns

./: .gitignore  CMakeLists.txt  LICENSE  README.md
gdscript/command/: exercise_1.gd
gdscript/designPatterns/: icon.svg.import  project.godot
javascript/command/: README.md  common.js  exercise1.html  exercise1.js
javascript/command/exercise1/: README.md  entity.js  index.html  index.js  inputHandler.js
javascript/command/exercise2/: README.md  entity.js  index.html
javascript/command/exercise3/: color.js  dataStructures.js  entity.js  index.html
javascript/observer/: README.md  example_solution.md
patterns/: README-template.md  prompt.txt
patterns/Flyweight/: README.md
patterns/command/: README.md
patterns/flyweight/: README.md
patterns/observer/: README.md  observer.md
patterns/prototype/: README.md  prototype.md
patterns/singleton/: README.md  singleton.md
patterns/state/: README.md  state.md
src/: CMakeLists.txt  compile.sh  double-buffer--game-state.cpp  double-buffer--rendering.cpp  game-loop.cpp  main.cpp
src/bytecode/: CMakeLists.txt  bytecode.cpp
src/component/: CMakeLists.txt  component.cpp  game-object.cpp  game-object.hpp
src/double-buffer/: CMakeLists.txt
src/event-queue/: CMakeLists.txt  event-queue.cpp
src/game-loop/: CMakeLists.txt
src/service-locator/: CMakeLists.txt  service-locator.cpp
src/subclass-sandbox/: CMakeLists.txt  subclass-sandbox.cpp
src/type-object/: CMakeLists.txt  monster.cpp  monster.hpp  type-object.cpp
src/update-method/: CMakeLists.txt  update-method.cpp
(+72 files in other folders)
